@@ -56,6 +56,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-11338 (SplFileInfo empty getBasename with more than one
     slash). (nielsdos)
 
+- Session:
+  . Removed broken url support for transferring session ID. (ilutov)
+
 - Standard:
   . Fix access on NULL pointer in array_merge_recursive(). (ilutov)
   . Fix exception handling in array_multisort(). (ilutov)
